refactor: clean up unused imports and simplify boolean logic across vehicle and system classes